--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" media="all" href="stylebackground.css" />
     <title>Juego del Gato</title>
 </head>
 
 <body>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+
     <div class="container">
-        <h1>Juego del Gato Multiplicador</h1>
+        <h1> <strong>Juego del Gato Matematico</strong> </h1>
         <div class="tic-tac-toe">
             <div class="cell" onclick="makeMove(0)"></div>
             <div class="cell" onclick="makeMove(1)"></div>
